# Plant-Backend-imaginatio

./: .gitignore  README.md  main.py  pyproject.toml
backend/: main.py
backend/data/users/: a798bf86.json
backend/routers/: minigame.py
backend/schemas/: minigame.py
frontend/: pubspec.yaml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/lib/: main.dart
frontend/lib/core/: router.dart
frontend/lib/models/: models.dart
frontend/lib/modules/inventory/: inventory_screen.dart
frontend/lib/modules/main_menu/: login_screen.dart  main_menu.dart
frontend/lib/modules/main_menu/components/: ButtonEnter.dart  background.dart  loginComponent.dart
frontend/lib/modules/plant_game/: plant_screen.dart
frontend/lib/modules/plant_game/components/: Animation_compost.dart  Animation_critical.dart  Animation_danger.dart  Animation_evo.dart  Animation_sun.dart  Animation_tombstone.dart  Animation_water.dart  Button_Inventary.dart  Button_game_compost.dart  Button_game_sun.dart  Button_game_water.dart  Button_help.dart  Text_name.dart  background.dart  button_resource_compost.dart  button_resource_sun.dart  button_resource_water.dart  panel_bar.dart  panel_resource.dart  panel_title.dart  plant.dart
frontend/lib/services/: auth_service.dart  local_storage_service.dart  minigame_service.dart  plant_service.dart
models/: plant.py  user.py
routers/: auth.py  minigame.py  plants.py  resources.py
schemas/: minigame.py  plant.py  resources.py  user.py
services/: plant_service.py  resource_service.py  user_service.py
(+16 files in other folders)
