[project]
name = "plant-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.135.1",
    "passlib>=1.7.4",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]
